[package]
name = "importer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "*", features = ["bundled", "backup"] }
csv = { version = "*" }
serde = { version = "*" }
serde_derive = "*"
serde_json = "*"
nom = "6"
strum ="*"
strum_macros = "*"
reqwest= { version = "*", features = ["json"] }
tokio = { version = "*", features = ["full"] }